# Odysseus-AI

./: .clang-format  .gitignore.save  AUDIT_REPORT.md  AUDIT_REPORT_FOLLOWUP.md  AUDIT_REPORT_V3.md  CMakeLists.txt
config/: response_config.json
data/: anomaly_model.onnx  anomaly_model_v2.onnx  anomaly_model_v3.onnx  anomaly_model_v3_metadata.json  anomaly_model_v3_params.json  anomaly_model_v3_scorer.py  anomaly_model_v4_ember.onnx  anomaly_model_v4_ember_metadata.json  dataset.csv  eval_v3_results.json
data/yara_rules/: eicar.yar  odysseus_starter.yar  suspicious_pe.yar
data/yara_rules/experimental/: aggressive_heuristics.yar
docs/: AI_ANOMALY_DETECTION.md  ML_TRAINING_NOTE.md
include/ai/: AnomalyDetector.h  EmberDetector.h  EmberFeatureExtractor.h  FeatureExtractor.h  FileTypeScoring.h  LLMExplainer.h  ScanResultFormatter.h
include/core/: ScannerConfig.h
include/db/: CacheVersion.h
include/edr/: AlertTypes.h  MonitoringService.h  SecurityScoreEngine.h  SnapshotDiff.h
include/monitor/: PersistenceScanner.h  ProcessEnumerator.h  ProcessInfo.h  SuspiciousHeuristics.h  SystemMonitor.h
include/reputation/: CodeSigning.h  ReputationDB.h
include/response/: ActionLog.h  Allowlist.h  MiniJson.h  Quarantine.h  README.md  ResponseManager.h  ResponseManagerSingleton.h  ResponseTypes.h
include/rootkit/: IntegrityChecker.h  KernelExtensionScanner.h  ProcessCrossView.h  RootkitMonitor.h  RootkitTypes.h
include/scanner/: YaraScanner.h
include/ui/: ResponsePanel.h
resources/: resources.qrc
scripts/: dataset_v3.csv  evaluate_model_v3.py  export_lgbm_model.py  generate_dataset.py  generate_dataset_v3.py  generate_synthetic_dataset.py  prepare_logo.py  train_ember_model.py  train_model.py  train_model_v3.py  train_v3_standalone.py
src/: main.cpp
src/ai/: AnomalyDetector.cpp  EmberDetector.cpp  EmberFeatureExtractor.cpp  FeatureExtractor.cpp  LLMExplainer.cpp
src/core/: FileScanner.cpp  FileScanner.h  FileScannerContext.cpp  FileScannerDetectors.cpp  FileScannerEngine.cpp  FileScannerHash.cpp  FileScannerYaraReputation.cpp  ScannerConfig.cpp
src/db/: CacheVersion.cpp  ScanDatabase.cpp  ScanDatabase.h  sqlite3.h
src/edr/: MonitoringService.cpp  SecurityScoreEngine.cpp  SnapshotDiff.cpp
src/monitor/: PersistenceScanner.cpp  ProcessEnumerator.cpp  SuspiciousHeuristics.cpp  SystemMonitor.cpp
src/reputation/: CodeSigning.cpp  ReputationDB.cpp
src/response/: ActionLog.cpp  Allowlist.cpp  CMakeLists.txt  Quarantine.cpp  ResponseManager.cpp  ResponseManagerSingleton.cpp  ResponseTypes.cpp
src/rootkit/: IntegrityChecker.cpp  KernelExtensionScanner.cpp  ProcessCrossView.cpp  RootkitMonitor.cpp
src/scanner/: YaraScanner.cpp
src/ui/: ResponsePanel.cpp  ui.cpp  ui.h
src/ui/MainWindow/: MainWindow.cpp  MainWindow.h
src/ui/ScanTypeOverlay/: ScanTypeOverlay.cpp  ScanTypeOverlay.h
src/ui/SystemStatusPanel/: SystemStatusPanel.cpp  SystemStatusPanel.h
src/ui/ThreatCard/: ThreatCard.cpp  ThreatCard.h
src/ui/pages/: AlertsPage.cpp  AlertsPage.h  DashboardPage.cpp  DashboardPage.h  QuarantinePage.cpp  QuarantinePage.h  ResultsPage.cpp  ResultsPage.h  ScanPage.cpp  ScanPage.h  SettingsPage.cpp  SettingsPage.h
src/ui/theme/: DashboardTheme.cpp  DashboardTheme.h
src/ui/widgets/: ActivityList.cpp  ActivityList.h  AlertDetailPanel.cpp  AlertDetailPanel.h  AlertRow.cpp  AlertRow.h  DetailSection.cpp  DetailSection.h  DonutChart.cpp  DonutChart.h  DropArea.cpp  DropArea.h  FilterBar.cpp  FilterBar.h  ScanTypeSelector.cpp  ScanTypeSelector.h  SecurityScoreCard.cpp  SecurityScoreCard.h  SeverityBadge.cpp  SeverityBadge.h  Sidebar.cpp  Sidebar.h  StatCard.cpp  StatCard.h  ThreatDetailPanel.cpp  ThreatDetailPanel.h  ThreatRow.cpp  ThreatRow.h  ToggleRow.cpp  ToggleRow.h
test_files/: readme.txt
tests/: integration_tests.cpp  response_tests.cpp
training_data/benign/scripts/: cleanup_cache.sh  collect_benign_dataset.py  diagnose_model.py  evaluate_model.py  generate_dataset.py  health_check.py  test_feature_extractor.py  test_script.sh
training_data/benign/text/: AnomalyDetector.cpp  AnomalyDetector.h  CHANGELOG.md  CMakeLists.txt  FeatureExtractor.cpp  FileScanner.h  README.md  SETUP_GUIDE.md  ScanDatabase.cpp  ScanResultFormatter.h  anomaly_model_v2_metadata.json  config.json  malware_hashes.txt
training_data/benign/web/: api_config.json  chatbot.html  simple_page.html  styles.css
training_data/malware/: README.md
training_data/malware/scripts/: .gitkeep
training_data/suspicious/scripts/: fake_script.py  ps_dropper_sim.py  rev_shell.sh
training_data/suspicious/text/: base64_test.txt  obfuscated_config.txt
training_data/suspicious/web/: redirect_page.html  suspicious_html.html
